--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.1"
+        "laravel/ui": "^3.1",
+        "orchestra/parser": "^6.0",
+        "socialiteproviders/facebook": "^4.0",
+        "socialiteproviders/vkontakte": "^4.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
