--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -45,3 +45,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VKONTAKTE_CLIENT_ID=""
+VKONTAKTE_CLIENT_SECRET=""
+VKONTAKTE_REDIRECT_URI=""
+
+FACEBOOK_CLIENT_ID=""
+FACEBOOK_CLIENT_SECRET=""
+FACEBOOK_REDIRECT_URI=""
